[package]
name = "exchange-crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
reqwest = {version = "0.11.5", features = ["blocking", "json"] }
serde = {version = "1.0.130",  features = ["derive"] }
serde_json = { version = "1.0.59" }